@@ -1,0 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="legend.basics">Task assets </label>
+</labels>
