@@ -1,0 +1,8 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="general">Ustawienia ogólne</label>
+	<label index="general.use">Use Assets Functionality</label>
+	<label index="asset">Assets</label>
+	<label index="asset.seeAll">See All Assets</label>
+	<label index="asset.delete">Delete Asset</label>
+</labels>
