@@ -1,5 +1,8 @@
 todoyu assets extension changelog
 
+assets 1.1.2 - not released yet
+	* Translation: Polish
+
 assets 1.1.1 - 2011-09-15
 	* Added: Mime type icons (rtf, eml, csv, pds, tif, tiff, ai, svg, eps, dxf, wmf, avi, mov, rm, ram, wmv, mpeg, mpg, mp4, 7z, bin, conf) 
 	* Added: New class to handle temporary uploaded files
